test/corpus/accessop.test
==========
Method call on dotted identifier
==========
x.y.z()
---
(source_file
  (function_call
    function: (dotted_identifier
      (dotted_identifier
        (identifier)
        (identifier))
      (identifier))
    args: (argument_list)))
==========
field assignment via .@
==========
class Foo {
  def bar() {
    this.@x = 1
    this.@y = 2
  }
}
---
(source_file
  (class_definition
    name: (identifier)
    body: (closure
      (function_definition
        function: (identifier)
        parameters: (parameter_list)
        body: (closure
          (assignment
            (access_op
              (identifier))
            (number_literal))
          (assignment
            (access_op
              (identifier))
            (number_literal)))))))
