test/corpus/comment.test
==========
Shebang
==========
#!/usr/bin/env groovy
pipeline {
}
---
(source_file
  (shebang)
  (pipeline
    (closure)))
==========
Single line comment
==========
//hello
x = 5 //TODO
---
(source_file
  (comment)
  (assignment
    (identifier)
    (number_literal))
  (comment))
==========
Multiline comment
==========
/*hello
* / */
---
(source_file
  (comment))
==========
groovydoc
==========
/**
* hello world
* @param abc - thing
* @throws Exc
* @asdf ghjkl
* @return
*/
x = hi
---
(source_file
  (groovy_doc
    (first_line)
    (groovy_doc_param
      (identifier))
    (groovy_doc_throws
      (identifier))
    (groovy_doc_tag)
    (groovy_doc_tag))
  (assignment
    (identifier)
    (identifier)))
==========
single-line groovydoc
==========
/** The maximum number of retries before giving up */
class Foo {}
---
(source_file
  (groovy_doc
    (first_line))
  (class_definition
    name: (identifier)
    body: (closure)))
==========
groovydoc with @TEXT
==========
/**
hello world
@THIS_IS_TEXT @tag
*/
---
(source_file
  (groovy_doc
    (first_line)
    (groovy_doc_at_text)
    (groovy_doc_tag)))

==========
groovydoc with double-star closing
==========
/**
 * Returns the host type that is to be provisioned
 **/
x = 1
---
(source_file
  (groovy_doc
    (first_line))
  (assignment
    (identifier)
    (number_literal)))

==========
groovydoc with bold markers in content
==========
/**
 * Pick server **DONE**
 * Verify ILO **DONE**
 */
x = 1
---
(source_file
  (groovy_doc
    (first_line))
  (assignment
    (identifier)
    (number_literal)))
