test/corpus/each.test
==========
Basic each loop
==========
['11','17','21'].each {
  println("hello!" + it)
}
---
(source_file
  (function_call
    function: (dotted_identifier
      (list
        (string
          (string_content))
        (string
          (string_content))
        (string
          (string_content)))
      (identifier))
    trailing_closure: (closure
      (function_call
        function: (identifier)
        args: (argument_list
          (binary_op
            (string
              (string_content))
            (identifier)))))))
==========
Each loop on range syntax
==========
(1..<5).each{println it}
---
(source_file
  (function_call
    function: (dotted_identifier
      (parenthesized_expression
        (binary_op
          (number_literal)
          (number_literal)))
      (identifier))
    trailing_closure: (closure
      (juxt_function_call
        function: (identifier)
        args: (argument_list
          (identifier))))))
