test/corpus/new.test
==========
new with generics
==========
x = new ServiceResponse<PrepareWorkloadResponse>(true, "ok")
---
(source_file
  (assignment
    (identifier)
    (new_object
      (identifier)
      (generics
        (identifier))
      (argument_list
        (boolean_literal)
        (string
          (string_content))))))
==========
new with diamond operator
==========
x = new ServiceResponse<>(true, null)
---
(source_file
  (assignment
    (identifier)
    (new_object
      (identifier)
      (generics)
      (argument_list
        (boolean_literal)
        (null)))))

==========
method chaining after new
==========
x = new Foo().bar("a")
---
(source_file
  (assignment
    (identifier)
    (function_call
      (dotted_identifier
        (new_object
          (identifier)
          (argument_list))
        (identifier))
      (argument_list
        (string
          (string_content))))))
